@@ -104,8 +104,8 @@ gboolean gtk_text_iter_ends_line         (const GtkTextIter   *iter);
 
 gint     gtk_text_iter_get_chars_in_line (const GtkTextIter   *iter);
 
-gboolean gtk_text_iter_get_style_values  (const GtkTextIter    *iter,
-                                          GtkTextStyleValues   *values);
+gboolean gtk_text_iter_get_attributes    (const GtkTextIter    *iter,
+                                          GtkTextAttributes   *values);
 
 gboolean gtk_text_iter_is_last           (const GtkTextIter    *iter);
 gboolean gtk_text_iter_is_first          (const GtkTextIter    *iter);
